made it responsive

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
   <head>
+    <!-- character encoding -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,6 +19,8 @@
         box-sizing: border-box;
       }
       body {
+        width: 100%;
+        height: auto;
         display: flex;
         flex-direction: column;
         align-items: center;
